[tool.poetry]
name = "learning-sockets"
version = "0.1.0"
description = ""
authors = ["grbll <grbll@tutanota.com>"]
readme = "README.md"
packages = [{include = "learning_sockets"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
